--- a/Soo/index2.html
+++ b/Soo/index2.html
@@ -5,6 +5,23 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
+
+        <style>
+            body {
+                background-color: black;
+            }
+
+            img {
+                width: 500px;
+                height: 500px;
+            }
+        </style>
     </head>
-    <body></body>
+    <body>
+        <section class="2_pg">
+            <div>
+                <img src="./jge2.png" alt="zz" />
+            </div>
+        </section>
+    </body>
 </html>
