문구 , 로고 넣음

--- a/Hoon/lastText.html
+++ b/Hoon/lastText.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>당신의 행성은 무엇입니까? 부분</title>
+    <title>텍스트 날라오는거 구현하기</title>
     <link rel="stylesheet" href="./lastText.css" />
   </head>
   <body>
-    <section id="lastScene">
+    <section id="lastText">
       <div class="container">
-        <div class="part-1">당신의</div>
-        <!-- 이미지로 행성 고리있는거 하면 좋을듯? -->
-        <div class="part-2">행성</div>
-        <div class="part-3">은</div>
-        <div class="part-4">무엇</div>
-        <div class="part-5">입니까?</div>
+        <div class="part-1"><p>당신의</p></div>
+        <div class="part-2"><p>행성은</p></div>
+        <div class="commet">
+          <img src="../Soo/JGE.png" alt="logo" />
+        </div>
+        <div class="part-3"><p>무엇</p></div>
+        <div class="part-4"><p>입니까</p></div>
+        <div class="questionMark"></div>
       </div>
     </section>
   </body>
