--- a/Soo/index2.html
+++ b/Soo/index2.html
@@ -5,22 +5,33 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
-
-        <style>
-            body {
-                background-color: black;
-            }
-
-            img {
-                width: 500px;
-                height: 500px;
-            }
-        </style>
+        <link rel="stylesheet" href="./index2.css" />
+        <script defer src="./index2.js"></script>
     </head>
     <body>
-        <section class="2_pg">
-            <div>
-                <img src="./jge2.png" alt="zz" />
+        <section class="pg_2">
+            <div class="container">
+                <div class="stars">
+                    <img src="./white-star.png" alt="white-star" class="small-star" />
+                    <img src="./white-star.png" alt="white-star" class="small-star" />
+                    <img src="./white-star.png" alt="white-star" class="small-star" />
+                    <img src="./white-star.png" alt="white-star" class="small-star" />
+                    <img src="./white-star.png" alt="white-star" class="small-star" />
+                    <img src="./white-star.png" alt="white-star" class="normal-star" />
+                    <img src="./white-star.png" alt="white-star" class="normal-star" />
+                    <img src="./white-star.png" alt="white-star" class="normal-star" />
+                    <img src="./white-star.png" alt="white-star" class="normal-star" />
+                    <img src="./white-star.png" alt="white-star" class="normal-star" />
+                    <img src="./white-star.png" alt="white-star" class="big-star" />
+                    <img src="./white-star.png" alt="white-star" class="big-star" />
+                    <img src="./white-star.png" alt="white-star" class="big-star" />
+                    <img src="./white-star.png" alt="white-star" class="big-star" />
+                    <img src="./white-star.png" alt="white-star" class="big-star" />
+                </div>
+                <div class="things">
+                    <img src="./asteroid2.png" alt="asteriod" class="asteriod" />
+                </div>
+                <div class="box"></div>
             </div>
         </section>
     </body>
