--- a/Soo/index2.html
+++ b/Soo/index2.html
@@ -10,6 +10,7 @@
     </head>
     <body>
         <section class="pg_2">
+            <div class="cursor_item"></div>
             <div class="container">
                 <div class="stars">
                     <img src="./white-star.png" alt="white-star" class="small-star" />
@@ -29,9 +30,16 @@
                     <img src="./white-star.png" alt="white-star" class="big-star" />
                 </div>
                 <div class="things">
-                    <img src="./asteroid2.png" alt="asteriod" class="asteriod" />
+                    <div class="box">
+                        <img src="./asteroid2.png" alt="asteriod" class="asteriod" />
+                    </div>
+                    <div class="box">
+                        <img src="./asteroid2.png" alt="asteriod" class="asteriod" />
+                    </div>
+                    <div class="box">
+                        <img src="./asteroid2.png" alt="asteriod" class="asteriod" />
+                    </div>
                 </div>
-                <div class="box"></div>
             </div>
         </section>
     </body>
