--- a/Soo/index2.html
+++ b/Soo/index2.html
@@ -10,6 +10,7 @@
     </head>
     <body>
         <section class="pg_2">
+            <h1>test</h1>
             <div class="cursor_item"></div>
             <div class="container">
                 <div class="stars">
