--- a/Soo/myPage/Test/wheel.html
+++ b/Soo/myPage/Test/wheel.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <title></title>
     <link rel="stylesheet" href="./wheel.css" />
     <script defer src="./wheel.js"></script>
   </head>
   <body>
-    <div class="content"><h1>1</h1></div>
-    <div class="content"><h1>2</h1></div>
-    <div class="content"><h1>3</h1></div>
-    <div class="content"><h1>4</h1></div>
-    <div class="content"><h1>5</h1></div>
-    <div class="content"><h1>6</h1></div>
-    <div class="content"><h1>7</h1></div>
+    <div class="section" id="section1">
+      쿄쿄
+      <div id="section1_detail"></div>
+    </div>
+    <div class="section" id="section2">123</div>
+    <div class="section" id="section3">강지훈</div>
+    <div class="section" id="section4">채채퐁</div>
   </body>
 </html>
