--- a/Soo/index2.html
+++ b/Soo/index2.html
@@ -1,47 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="./index2.css" />
-    <script defer src="./index2.js"></script>
-  </head>
-  <body>
-    <section class="pg_2">
-      <h1>test</h1>
-      <div class="cursor_item"></div>
-      <div class="container">
-        <div class="stars">
-          <img src="./white-star.png" alt="white-star" class="small-star" />
-          <img src="./white-star.png" alt="white-star" class="small-star" />
-          <img src="./white-star.png" alt="white-star" class="small-star" />
-          <img src="./white-star.png" alt="white-star" class="small-star" />
-          <img src="./white-star.png" alt="white-star" class="small-star" />
-          <img src="./white-star.png" alt="white-star" class="normal-star" />
-          <img src="./white-star.png" alt="white-star" class="normal-star" />
-          <img src="./white-star.png" alt="white-star" class="normal-star" />
-          <img src="./white-star.png" alt="white-star" class="normal-star" />
-          <img src="./white-star.png" alt="white-star" class="normal-star" />
-          <img src="./white-star.png" alt="white-star" class="big-star" />
-          <img src="./white-star.png" alt="white-star" class="big-star" />
-          <img src="./white-star.png" alt="white-star" class="big-star" />
-          <img src="./white-star.png" alt="white-star" class="big-star" />
-          <img src="./white-star.png" alt="white-star" class="big-star" />
-        </div>
-        <div class="things">
-          <div class="box">
-            <img src="./asteroid2.png" alt="asteriod" class="asteriod" />
-          </div>
-          <div class="box">
-            <img src="./asteroid2.png" alt="asteriod" class="asteriod" />
-          </div>
-          <div class="box">
-            <img src="./asteroid2.png" alt="asteriod" class="asteriod" />
-          </div>
-        </div>
-      </div>
-    </section>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
+        <link rel="stylesheet" href="./index2.css" />
+        <script defer src="./index2.js"></script>
+    </head>
+    <body>
+        <section class="pg_2">
+            <h1>test</h1>
+            <div class="cursor_item"></div>
+            <div class="container">
+                <div class="stars">
+                    <img src="./img/white-star.png" alt="white-star" class="small-star" />
+                    <img src="./img/white-star.png" alt="white-star" class="small-star" />
+                    <img src="./img/white-star.png" alt="white-star" class="small-star" />
+                    <img src="./img/white-star.png" alt="white-star" class="small-star" />
+                    <img src="./img/white-star.png" alt="white-star" class="small-star" />
+                    <img src="./img/white-star.png" alt="white-star" class="normal-star" />
+                    <img src="./img/white-star.png" alt="white-star" class="normal-star" />
+                    <img src="./img/white-star.png" alt="white-star" class="normal-star" />
+                    <img src="./img/white-star.png" alt="white-star" class="normal-star" />
+                    <img src="./img/white-star.png" alt="white-star" class="normal-star" />
+                    <img src="./img/white-star.png" alt="white-star" class="big-star" />
+                    <img src="./img/white-star.png" alt="white-star" class="big-star" />
+                    <img src="./img/white-star.png" alt="white-star" class="big-star" />
+                    <img src="./img/white-star.png" alt="white-star" class="big-star" />
+                    <img src="./img/white-star.png" alt="white-star" class="big-star" />
+                </div>
+                <div class="things">
+                    <div class="box">
+                        <img src="./img/asteroid2.png" alt="asteriod" class="asteriod" />
+                    </div>
+                    <div class="box">
+                        <img src="./img/asteroid2.png" alt="asteriod" class="asteriod" />
+                    </div>
+                    <div class="box">
+                        <img src="./img/asteroid2.png" alt="asteriod" class="asteriod" />
+                    </div>
+                </div>
+            </div>
+        </section>
+    </body>
 </html>
