--- a/Soo/myPage/Page.html
+++ b/Soo/myPage/Page.html
@@ -25,6 +25,7 @@
                 <div class="sa sa-down" data-sa-trigger="#saDiv5">디비전 6</div>
                 <div class="sa sa-right" data-sa-trigger="#saDiv5">디비전 7</div>
                 <div class="sa sa-left" data-sa-trigger="#saDiv5">디비전 8</div>
+                <div><img src="./photo/bong1.gif" alt="bong"></div>
             </section>
             <section>
                 <div class="sa sa-rotateL" id="saDiv9">디비전 9</div>
