--- a/Hoon/lastText.html
+++ b/Hoon/lastText.html
@@ -17,7 +17,12 @@
         </div>
         <div class="part-3"><p>무엇</p></div>
         <div class="part-4"><p>입니까</p></div>
-        <div class="questionMark"></div>
+        <div class="questionMark">
+          <img src="../img/questionmark1.png" alt="" />
+        </div>
+        <div class="monster">
+          <img src="../img/yoda.png" alt="" />
+        </div>
       </div>
     </section>
   </body>
