--- a/Soo/myPage/Test/test.html
+++ b/Soo/myPage/Test/test.html
@@ -55,7 +55,87 @@
         <div class="content">
             <section class="pg" id="p7">
                 <div class="blank"></div>
+
+                <article>
+                    <div class="inner">
+                        <div class="pic"></div>
+                        <div class="text">
+                            <h2></h2>
+                        </div>
+                    </div>
+                </article>
+
+                <article>
+                    <div class="inner">
+                        <div class="pic"></div>
+                        <div class="text">
+                            <h2></h2>
+                        </div>
+                    </div>
+                </article>
+
+                <article>
+                    <div class="inner">
+                        <div class="pic"></div>
+                        <div class="text">
+                            <h2></h2>
+                        </div>
+                    </div>
+                </article>
+
+                <article>
+                    <div class="inner">
+                        <div class="pic"></div>
+                        <div class="text">
+                            <h2></h2>
+                        </div>
+                    </div>
+                </article>
+
+                <article>
+                    <div class="inner">
+                        <div class="pic"></div>
+                        <div class="text">
+                            <h2></h2>
+                        </div>
+                    </div>
+                </article>
+
+                <article>
+                    <div class="inner">
+                        <div class="pic"></div>
+                        <div class="text">
+                            <h2></h2>
+                        </div>
+                    </div>
+                </article>
+
+                <article>
+                    <div class="inner">
+                        <div class="pic"></div>
+                        <div class="text">
+                            <h2></h2>
+                        </div>
+                    </div>
+                </article>
+
+                <article>
+                    <div class="inner">
+                        <div class="pic"></div>
+                        <div class="text">
+                            <h2></h2>
+                        </div>
+                    </div>
+                </article>
             </section>
+
+            <nav class="btnPrev">
+                <span>PREV</span>
+            </nav>
+
+            <nav class="btnNext">
+                <span>NEXT</span>
+            </nav>
         </div>
     </body>
 </html>
