--- a/Soo/myPage/Test/test.html
+++ b/Soo/myPage/Test/test.html
@@ -7,135 +7,51 @@
         <script defer src="./test.js"></script>
     </head>
     <body>
-        <div class="contain">
-            <div class="btn">
-                <a href="#p2" class="moveDown">Down</a>
-                <a href="#p2" class="moveUp">UP</a>
+        <div>
+            <div class="contain">
+                <div class="btn">
+                    <a href="#p2" class="moveDown">Down</a>
+                    <a href="#p2" class="moveUp">UP</a>
+                </div>
+
+                <section class="pg" id="p1">
+                    <div class="cover cover1">
+                        <p class="first"></p>
+                    </div>
+                </section>
+
+                <section class="pg" id="p2">
+                    <div class="cover cover2">
+                        <p class="second"></p>
+                    </div>
+                </section>
+
+                <section class="pg" id="p3">
+                    <div class="cover cover3">
+                        <p class="third"></p>
+                    </div>
+                </section>
+
+                <section class="pg" id="p4">
+                    <div class="cover cover4">
+                        <p class="forth"></p>
+                    </div>
+                </section>
+
+                <section class="pg" id="p5">
+                    <div class="cover cover5">
+                        <p class="fifth"></p>
+                    </div>
+                </section>
             </div>
 
-            <section class="pg" id="p1">
-                <div class="cover cover1">
-                    <p class="first"></p>
-                </div>
-            </section>
-
-            <section class="pg" id="p2">
-                <div class="cover cover2">
-                    <p class="second"></p>
-                </div>
-            </section>
-
-            <section class="pg" id="p3">
-                <div class="cover cover3">
-                    <p class="third"></p>
-                </div>
-            </section>
-
-            <section class="pg" id="p4">
-                <div class="cover cover4">
-                    <p class="forth"></p>
-                </div>
-            </section>
-
-            <section class="pg" id="p5">
-                <div class="cover cover5">
-                    <p class="fifth"></p>
-                </div>
-            </section>
-        </div>
-
-        <div class="enter">
-            <section class="pg" id="p6">
-                <div class="enterBtn">
-                    <a href="#p7">입장하시겠습니까?</a>
-                </div>
-            </section>
-        </div>
-
-        <div class="content">
-            <section class="pg" id="p7">
-                <div class="blank"></div>
-
-                <article>
-                    <div class="inner">
-                        <div class="pic"></div>
-                        <div class="text">
-                            <h2></h2>
-                        </div>
+            <div class="enter">
+                <section class="pg" id="p6">
+                    <div class="enterBtn">
+                        <a href="#p7">입장하시겠습니까?</a>
                     </div>
-                </article>
-
-                <article>
-                    <div class="inner">
-                        <div class="pic"></div>
-                        <div class="text">
-                            <h2></h2>
-                        </div>
-                    </div>
-                </article>
-
-                <article>
-                    <div class="inner">
-                        <div class="pic"></div>
-                        <div class="text">
-                            <h2></h2>
-                        </div>
-                    </div>
-                </article>
-
-                <article>
-                    <div class="inner">
-                        <div class="pic"></div>
-                        <div class="text">
-                            <h2></h2>
-                        </div>
-                    </div>
-                </article>
-
-                <article>
-                    <div class="inner">
-                        <div class="pic"></div>
-                        <div class="text">
-                            <h2></h2>
-                        </div>
-                    </div>
-                </article>
-
-                <article>
-                    <div class="inner">
-                        <div class="pic"></div>
-                        <div class="text">
-                            <h2></h2>
-                        </div>
-                    </div>
-                </article>
-
-                <article>
-                    <div class="inner">
-                        <div class="pic"></div>
-                        <div class="text">
-                            <h2></h2>
-                        </div>
-                    </div>
-                </article>
-
-                <article>
-                    <div class="inner">
-                        <div class="pic"></div>
-                        <div class="text">
-                            <h2></h2>
-                        </div>
-                    </div>
-                </article>
-            </section>
-
-            <nav class="btnPrev">
-                <span>PREV</span>
-            </nav>
-
-            <nav class="btnNext">
-                <span>NEXT</span>
-            </nav>
+                </section>
+            </div>
         </div>
     </body>
 </html>
