--- a/Soo/myPage/Test/test.html
+++ b/Soo/myPage/Test/test.html
@@ -7,7 +7,7 @@
     <script defer src="./test.js"></script>
   </head>
   <body>
-    <div>
+    <div class="box">
       <div class="contain">
         <div class="btn">
           <a href="#p2" class="moveDown">Down</a>
