--- a/Soo/myPage/Test/test.html
+++ b/Soo/myPage/Test/test.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Space Monster</title>
-    <link rel="stylesheet" type="text/css" href="./test.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <script defer src="./test.js"></script>
   </head>
   <body>
@@ -52,6 +52,77 @@
           </div>
         </section>
       </div>
+
+      <figure class="pg" id="p7">
+        <section class="player">
+          <article class="on">
+            <div class="inner">
+              <div class="pic"></div>
+              <div class="text">
+                <h2></h2>
+                <p></p>
+              </div>
+            </div>
+          </article>
+
+          <article>
+            <div class="inner">
+              <div class="pic"></div>
+              <div class="text"></div>
+            </div>
+          </article>
+
+          <article>
+            <div class="inner">
+              <div class="pic"></div>
+              <div class="text"></div>
+            </div>
+          </article>
+
+          <article>
+            <div class="inner">
+              <div class="pic"></div>
+              <div class="text"></div>
+            </div>
+          </article>
+
+          <article>
+            <div class="inner">
+              <div class="pic"></div>
+              <div class="text"></div>
+            </div>
+          </article>
+
+          <article>
+            <div class="inner">
+              <div class="pic"></div>
+              <div class="text"></div>
+            </div>
+          </article>
+
+          <article>
+            <div class="inner">
+              <div class="pic"></div>
+              <div class="text"></div>
+            </div>
+          </article>
+
+          <article>
+            <div class="inner">
+              <div class="pic"></div>
+              <div class="text"></div>
+            </div>
+          </article>
+        </section>
+
+        <nav class="btnPrev">
+          <span>PREV Music</span>
+        </nav>
+
+        <nav class="btnNext">
+          <span>NEXT Music</span>
+        </nav>
+      </figure>
     </div>
   </body>
 </html>
