--- a/Soo/myPage/Test/test.html
+++ b/Soo/myPage/Test/test.html
@@ -58,10 +58,7 @@
           <article class="on">
             <div class="inner">
               <div class="pic"></div>
-              <div class="text">
-                <h2></h2>
-                <p></p>
-              </div>
+              <div class="text"></div>
             </div>
           </article>
 
@@ -116,11 +113,11 @@
         </section>
 
         <nav class="btnPrev">
-          <span>PREV Music</span>
+          <span>Left BangMangE</span>
         </nav>
 
         <nav class="btnNext">
-          <span>NEXT Music</span>
+          <span>Right BangMangE</span>
         </nav>
       </figure>
     </div>
