--- a/Soo/myPage/Test/test.html
+++ b/Soo/myPage/Test/test.html
@@ -119,6 +119,10 @@
         <nav class="btnNext">
           <span>Right BangMangE</span>
         </nav>
+
+        <div class="explain">
+          <div class="ch_ex"></div>
+        </div>
       </figure>
     </div>
   </body>
