--- a/COMPLETE/index.html
+++ b/COMPLETE/index.html
@@ -6,7 +6,100 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jung Gang E</title>
     <link rel="stylesheet" href="./main.css" />
-    <script src="./main.js"></script>
+    <script defer src="./main.js"></script>
   </head>
-  <body></body>
+  <body>
+    <section id="pg_2">
+      <h1>test</h1>
+      <div class="cursor_item"></div>
+      <div class="container">
+        <div class="things">
+          <div class="box">
+            <img src="./img/asteroid2.png" alt="asteriod" class="asteriod" />
+          </div>
+          <div class="box">
+            <img src="./img/asteroid2.png" alt="asteriod" class="asteriod" />
+          </div>
+          <div class="box">
+            <img src="./img/asteroid2.png" alt="asteriod" class="asteriod" />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="pg_3">
+      <span class="spaceship">
+        <i class="fa-solid fa-shuttle-space"></i>
+      </span>
+
+      <span class="jp">
+        <i class="fa-solid fa-person"></i>
+      </span>
+
+      <div class="sun"></div>
+
+      <div class="wrapper">
+        <div class="card" style="--delay: -1">
+          <div class="content">
+            <div class="img">
+              <img src="./img/planet1.png" alt="행성1사진" />
+            </div>
+          </div>
+          <a href="#">EXPLORE</a>
+        </div>
+
+        <div class="card" style="--delay: 0">
+          <div class="content">
+            <div class="img">
+              <img src="./img/planet2.png" alt="행성2사진" />
+            </div>
+            <!-- <div class="details">
+                        <span>HI</span>
+                        <p>fronted developer</p>
+                    </div> -->
+          </div>
+          <a href="#">EXPLORE</a>
+        </div>
+
+        <div class="card" style="--delay: 1">
+          <div class="content">
+            <div class="img">
+              <img src="./img/earth.png" alt="지구사진" />
+            </div>
+            <!-- <div class="details">
+                        <span>HI</span>
+                        <p>fronted developer</p>
+                    </div> -->
+          </div>
+          <a class="earth" href="./mypage.html">EXPLORE</a>
+        </div>
+
+        <div class="card" style="--delay: 2">
+          <div class="content">
+            <div class="img">
+              <img src="./img/planet3.png" alt="행성3사진" />
+            </div>
+            <!-- <div class="details">
+                        <span>HI</span>
+                        <p>fronted developer</p>
+                    </div> -->
+          </div>
+          <a href="#">EXPLORE</a>
+        </div>
+
+        <div class="card" style="--delay: 2">
+          <div class="content">
+            <div class="img">
+              <img src="./img/planet4.png" alt="행성4사진" />
+            </div>
+            <!-- <div class="details">
+                        <span>HI</span>
+                        <p>fronted developer</p>
+                    </div> -->
+          </div>
+          <a href="#">EXPLORE</a>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
