--- a/COMPLETE/index.html
+++ b/COMPLETE/index.html
@@ -5,6 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jung Gang E</title>
+    <!-- gsap -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"
+      integrity="sha512-VEBjfxWUOyzl0bAwh4gdLEaQyDYPvLrZql3pw1ifgb6fhEvZl9iDDehwHZ+dsMzA0Jfww8Xt7COSZuJ/slxc4Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/ScrollTrigger.min.js"
+      integrity="sha512-v8B8T8l8JiiJRGomPd2k+bPS98RWBLGChFMJbK1hmHiDHYq0EjdQl20LyWeIs+MGRLTWBycJGEGAjKkEtd7w5Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <link rel="stylesheet" href="./main.css" />
     <script defer src="./main.js"></script>
   </head>
@@ -98,6 +111,24 @@
                     </div> -->
           </div>
           <a href="#">EXPLORE</a>
+        </div>
+      </div>
+    </section>
+
+    <section id="pg_4">
+      <div class="container">
+        <div class="part-1"><p>당신의</p></div>
+        <div class="part-2"><p>행성은</p></div>
+        <div class="commet">
+          <img src="../Soo/img/JGE.png" alt="logo" />
+        </div>
+        <div class="part-3"><p>무엇</p></div>
+        <div class="part-4"><p>입니까?</p></div>
+        <!-- <div class="questionMark">
+          <img src="../img/questionmark1.png" alt="" />
+        </div> -->
+        <div class="monster">
+          <img src="../img/yoda.png" alt="" />
         </div>
       </div>
     </section>
