--- a/Hoon/lastText.html
+++ b/Hoon/lastText.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="./lastText.css" />
   </head>
   <body>
-    <section id="lastText">
+    <section id="pg_4">
       <div class="container">
         <div class="part-1"><p>당신의</p></div>
         <div class="part-2"><p>행성은</p></div>
