--- a/1/pg_1/test7.html
+++ b/1/pg_1/test7.html
@@ -9,7 +9,7 @@
  
 </head>
 <body>
-    <section class="pg_1">
+    <section id="pg_1">
         <div class="banner">
             <video autoplay muted loop>
                 <source src="../video/ì__ ë_¼ ì__ì_¤í__ - 116577.mp4" type="video/mp4">
@@ -19,7 +19,6 @@
             <h2 class="title title2"><span class="title_opacity0">POS</span><span class="title_neon">CO</span></h2>
             <h2 class="title title3"><span class="title_neon">CO</span><span class="title_opacity0">SMIC</span></h2>
         </div>
-        
     </section>
   
 </body>
