--- a/COMPLETE/index.html
+++ b/COMPLETE/index.html
@@ -22,6 +22,18 @@
     <script defer src="./main.js"></script>
   </head>
   <body>
+    <section id="pg_1">
+      <div class="banner">
+          <video autoplay muted loop>
+              <source src="./img/ì__ ë_¼ ì__ì_¤í__ - 116577.mp4" type="video/mp4">
+          </video>
+      <div class="container">
+          <h2 class="title title1"><span class="title_neon">CO</span><span class="title_opacity0">DINGON</span></h2>
+          <h2 class="title title2"><span class="title_opacity0">POS</span><span class="title_neon">CO</span></h2>
+          <h2 class="title title3"><span class="title_neon">CO</span><span class="title_opacity0">SMIC</span></h2>
+      </div>
+    </section>
+    <div class="noContent"></div>
     <section id="pg_2">
       <h1>test</h1>
       <div class="cursor_item"></div>
